Fix header alignment.

--- a/css/main.css
+++ b/css/main.css
@@ -109,11 +109,6 @@ body {
     line-height: 1.7em;
 }
 
-svg {
-    height: 100%;
-    width: 100%;
-}
-
 header {
     margin: 0 0;
 }
@@ -123,15 +118,19 @@ header>h1 {
     text-align: center;
 }
 
-.header>h1 {
+.kl-header svg {
+    margin: 0 auto;
+}
+
+.kl-header>header>h1 {
     line-height: 1.7em;
 }
-.header>h1>span:first-child {
+.kl-header>header>h1>span:first-child {
     display: block;
     font-family: serif;
     font-size: 2.2em;
 }
-.header>h1>span:last-child {
+.kl-header>header>h1>span:last-child {
     text-transform: uppercase;
 }
 
